# ros_object_analytics

./: .gitignore  CHANGELOG.rst  README.md
object_analytics/: CMakeLists.txt  package.xml
object_analytics_launch/: CMakeLists.txt  package.xml
object_analytics_launch/launch/: analytics.launch  analytics_movidius_ncs.launch  analytics_opencl_caffe.launch
object_analytics_launch/launch/includes/: manager.launch  merger.launch  nodelet.launch.xml  segmenter.launch  splitter.launch  tracker.launch
object_analytics_msgs/: CMakeLists.txt  package.xml
object_analytics_msgs/msg/: ObjectInBox3D.msg  ObjectsInBoxes3D.msg  TrackedObject.msg  TrackedObjects.msg
object_analytics_nodelet/: CMakeLists.txt  mainpage.dox  object_analytics_nodelet_plugins.xml  package.xml
object_analytics_nodelet/cfg/: OrganizedMultiPlaneSegmentation.cfg  SegmentationAlgorithms.cfg
object_analytics_nodelet/include/object_analytics_nodelet/: const.h
object_analytics_nodelet/include/object_analytics_nodelet/merger/: merger.h  merger_nodelet.h
object_analytics_nodelet/include/object_analytics_nodelet/model/: object2d.h  object3d.h  object_utils.h  projector.h  projector_impl.h
object_analytics_nodelet/include/object_analytics_nodelet/segmenter/: algorithm.h  algorithm_config.h  algorithm_provider.h  organized_multi_plane_segmenter.h  segmenter.h  segmenter_nodelet.h
object_analytics_nodelet/include/object_analytics_nodelet/splitter/: splitter.h  splitter_nodelet.h
object_analytics_nodelet/include/object_analytics_nodelet/tracker/: tracking.h  tracking_manager.h  tracking_nodelet.h
object_analytics_nodelet/src/: const.cpp
object_analytics_nodelet/src/merger/: merger.cpp  merger_nodelet.cpp
object_analytics_nodelet/src/model/: object2d.cpp  object3d.cpp  object_utils.cpp  projector_impl.cpp
object_analytics_nodelet/src/segmenter/: algorithm_provider.cpp  algorithm_provider_impl.cpp  organized_multi_plane_segmenter.cpp  segmenter.cpp  segmenter_nodelet.cpp
object_analytics_nodelet/src/splitter/: splitter.cpp  splitter_nodelet.cpp
object_analytics_nodelet/src/tracker/: tracking.cpp  tracking_manager.cpp  tracking_nodelet.cpp
object_analytics_nodelet/tests/: mock_segmenter_detector.cpp  mtest_tracking.cpp  mtest_tracking.test  nodetest_merger.test  nodetest_segmenter.test  nodetest_splitter.test  pc2_publisher.cpp  unittest_merger.cpp  unittest_object2d.cpp  unittest_object3d.cpp  unittest_objectutils.cpp  unittest_segmenter.cpp  unittest_splitter.cpp  unittest_util.cpp  unittest_util.h.in
object_analytics_nodelet/tests/resource/: copy.pcd  cup.pcd  object3d.pcd  project.pcd  segment.pcd
object_analytics_visualization/: CMakeLists.txt  mainpage.dox  package.xml
object_analytics_visualization/cfg/: object_analytics_visualization.rviz
object_analytics_visualization/launch/: rviz.launch  viz_all.launch
object_analytics_visualization/launch/includes/: localization.launch  tracking.launch
object_analytics_visualization/scripts/: image_publisher.py  marker_publisher.py
