<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package>
  <name>object_analytics_visualization</name>
  <version>0.3.0</version>
  <description>The package for visualizing object analytics result</description>
  <maintainer email="peter.han@intel.com">Peter Han</maintainer>
  <author email="peter.han@intel.com">Peter Han</author>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/intel/ros_object_analytics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>object_analytics_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>object_analytics_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rviz</run_depend>
</package>
